--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commit-genius",
   "version": "1.0.0",
-  "description": "AI-powered conventional commit message generator",
+  "description": "AI-powered conventional commit message generator with multiple providers",
   "main": "index.js",
   "bin": {
     "commit-genius": "./index.js"
@@ -13,6 +13,7 @@
     "inquirer": "^8.2.4",
     "axios": "^1.3.4",
     "chalk": "^4.1.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "commander": "^11.1.0"
   }
 }
